# sds011-reader

./: .gitignore  CMakeLists.txt  README.md  multiple_sensors.py  multiple_sensors_node.py  multiple_sensors_node_with_relay.py  package.xml  read_relay.py  read_sensor.py
config/: sds011_reader.yml  sds011_relay.yml
data/: 2021-10-22.csv
launch/: sds011_reader.launch  sds011_relay.launch
msg/: PMValues.msg
