<?xml version="1.0"?>
<package>
  <name>sds011_reader</name>
  <version>1.0.0</version>
  <description>ROS interface for the sds011 PM sensor</description>

  <maintainer email="robert.milijas@fer.hr">Robert Milijas</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/vectornav</url> -->

  <author email="robert.milijas@fer.hr">Robert Milijas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
